--- a/startCode_gallery/css/style.css
+++ b/startCode_gallery/css/style.css
@@ -119,16 +119,43 @@ main {
 .button--center {position: relative; transform: translate(-50%, 0%); left: 50%; margin-top: 1rem;}
 
 /*GALERIE*/
-
-
-
+#galerie{
+    background-color:var(--primarC);
+    margin: 0;
+}
+.gallery{
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: repeat(6, minmax(250px, 1fr));
+    overflow-x: scroll;
+    padding: 50px;
+}
 
 @media (min-width: 700px) {
-    
+    .gallery{
+        overflow-x: hidden;
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+    }
+    .gItem--3, .gItem--6{
+        grid-column: span 2;
+    }
 }
+
 @media (min-width: 1200px) {
- 
+    .gallery{
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
+    }
+    .gItem--3, .gItem--6{
+        grid-column: span 1;
+    }
+    .gItem--2{
+        grid-row-start: 2;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
 }
+
 .gallery__buttons {
     transform: translate(-50%, 0%); 
     left: 50%;
